# opencv_lane_detection

./: CMakeLists.txt  README.md  package.xml
launch/: lane_detection.launch.xml
models/opel_ROS/: model.sdf
models/stopW/: model.sdf
rviz/: opencv.rviz
urdf/: rover.urdf.xacro
worlds/: road.world
